# nlp-100knock

./: README.md  pyproject.toml
data/: frequency1.txt  popular-names-sorted.txt  test.txt  val.txt
data/news+aggregator/__MACOSX/: ._newsCorpora.csv:Zone.Identifier
src/: chapter1.ipynb  chapter2.ipynb  chapter3.ipynb  chapter4.ipynb  chapter6.ipynb  my_functions.py
